--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -95,7 +95,7 @@
         img:last-child{
             margin-bottom: 0;
         }
-    }
+    }    
 
     .close-modal {
         // margin-bottom: 5px;
@@ -105,23 +105,24 @@
         width: 15%;
         padding: 0px 5px;
         // margin-left: 36.5%;
-        color: black;
-        background-color: #e9ecef;
+        color: white;
+        background-color: #324395;
         // float: right;
         // font-size: 22px;
         // font-weight: bold;
         text-align: center;
+        cursor: pointer;
         height: 25px;      
         border-radius: 5px;
+        border: none;      
         transition: background-color 0.5s, color 0.5s;
     }
     
     .close-modal:hover,
     .close-modal:focus {
-        background-color: black;                        
-        color: white;
+        // background-color: black;                        
+        // color: white;
         text-decoration: none;
-        cursor: pointer;
     }
 }
 
@@ -136,8 +137,13 @@
     margin-bottom: 12px;
     font-size: 22px;
     color: #e9ecef;
+    
 }
 
+::ng-deep .mat-checkbox-background, 
+.mat-checkbox-background{
+    background-color: #e9ecef80;
+}
 /* escondemos el default checkbox */
 .modal-video input[type="checkbox"] {
     position: absolute;
