font family sofia pro and buttom

--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -113,7 +113,7 @@
         text-align: center;
         cursor: pointer;
         height: 25px;      
-        border-radius: 5px;
+        // border-radius: 5px;
         border: none;      
         transition: background-color 0.5s, color 0.5s;
     }
