ajuste button flex

--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -85,7 +85,10 @@
                         <div class="modal-content">
                             <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="Girl in a jacket">
                         </div>
-                        <button class="close-modal" (click)="showModalVideo=false">Close</button>
+                        <div class="close-modal">
+                            <button (click)="showModalVideo=false">Close</button>
+                        </div>
+                        
                     </div>
                     <!-- modal end -->
                   
@@ -130,7 +133,10 @@
                         <div class="modal-content">
                             <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="Girl in a jacket">
                         </div>
-                        <button class="close-modal" (click)="showModalVideo=false">Close</button>
+                        <div class="close-modal">
+                            <button (click)="showModalVideo=false">Close</button>                            
+                        </div>
+                        
                     </div>
                     <!-- modal end -->                   
 
@@ -161,7 +167,10 @@
                         <div class="modal-content">
                             <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="Girl in a jacket">
                         </div>
-                        <button class="close-modal" (click)="showModalVideo=false">Close</button>
+                        <div class="close-modal">
+                            <button (click)="showModalVideo=false">Close</button>                            
+                        </div>
+                        
                     </div>
                     <!-- modal end -->
 
