--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -85,10 +85,7 @@
                         <div class="modal-content">
                             <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="Girl in a jacket">
                         </div>
-                        <div class="close-modal">
-                            <button (click)="showModalVideo=false">Close</button>
-                        </div>
-                        
+                        <button class="close-modal" (click)="showModalVideo=false">Close</button>
                     </div>
                     <!-- modal end -->
                   
@@ -133,10 +130,7 @@
                         <div class="modal-content">
                             <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="Girl in a jacket">
                         </div>
-                        <div class="close-modal">
-                            <button (click)="showModalVideo=false">Close</button>                            
-                        </div>
-                        
+                        <button class="close-modal" (click)="showModalVideo=false">Close</button>
                     </div>
                     <!-- modal end -->                   
 
@@ -167,10 +161,7 @@
                         <div class="modal-content">
                             <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="Girl in a jacket">
                         </div>
-                        <div class="close-modal">
-                            <button (click)="showModalVideo=false">Close</button>                            
-                        </div>
-                        
+                        <button class="close-modal" (click)="showModalVideo=false">Close</button>
                     </div>
                     <!-- modal end -->
 
