--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -155,7 +155,8 @@
                         </mat-icon>
                     </button>
                     <!-- modal -->
-                    <div *ngIf="showModalVideo" id="myModal" class="modal-video">
+                    <div *ngIf="showModalVideo" id="myModal" class="modal-video" 
+                    style="display: flex;flex-direction: column;gap: 6px;">
                         <mat-checkbox (click)="saveSelection()" class="example-margin container-checkbox" >Don't show again</mat-checkbox>
                     
                         <div class="modal-content">
@@ -246,7 +247,6 @@
         <p>{{myAngularxQrCode}}</p>
     </div>
 </div>
-
 <lottie-player class="lottie-player" *ngIf="loadingLottie" style="
     position: absolute;
     top: 40%;
@@ -255,7 +255,7 @@
     z-index: 999;    
     width: 465px;animation: 
     fadeIn 3s ease 4s forwards;" slot="end" autoplay loop
-    [src]="'/assets/img/cubo.json'">
+    [src]="'./assets/img/cubo.json'">
 </lottie-player>
 <lottie-player class="lottie-player" *ngIf="loadingLottie" style="
     position: absolute;
@@ -265,5 +265,5 @@
     z-index: 999;    
     width: 70px;animation: 
     fadeIn 3s ease 4s forwards;" slot="end" autoplay loop
-    [src]="'/assets/img/esfera.json'">
+    [src]="'./assets/img/esfera.json'">
 </lottie-player>
