--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -75,7 +75,7 @@
                     </button>
                    
                     <!-- modal -->
-                    <div *ngIf="showModalVideo" id="myModal" class="modal-video">
+                    <div *ngIf="showModalVideo" id="myModal" class="modal-video" style="display: flex;flex-direction: column;gap: 2px;">
                         <!-- <label class="container-checkbox">Don't show again
                             <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked> 
                             <span class="checkmark">&#x2714;</span>        
@@ -123,7 +123,7 @@
                         </mat-icon>
                     </button>
                     <!-- modal -->
-                    <div *ngIf="showModalVideo" id="myModal" class="modal-video">
+                    <!-- <div *ngIf="showModalVideo" id="myModal" class="modal-video"> CV
                         
                         <mat-checkbox (click)="saveSelection()" class="example-margin container-checkbox" >Don't show again</mat-checkbox>
                     
@@ -131,7 +131,7 @@
                             <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="Girl in a jacket">
                         </div>
                         <button class="close-modal" (click)="showModalVideo=false">Close</button>
-                    </div>
+                    </div> -->
                     <!-- modal end -->                   
 
                     <app-image-rank-drag [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
@@ -155,7 +155,7 @@
                         </mat-icon>
                     </button>
                     <!-- modal -->
-                    <div *ngIf="showModalVideo" id="myModal" class="modal-video" 
+                    <!-- <div *ngIf="showModalVideo" id="myModal" class="modal-video" CV
                     style="display: flex;flex-direction: column;gap: 6px;">
                         <mat-checkbox (click)="saveSelection()" class="example-margin container-checkbox" >Don't show again</mat-checkbox>
                     
@@ -163,7 +163,7 @@
                             <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="Girl in a jacket">
                         </div>
                         <button class="close-modal" (click)="showModalVideo=false">Close</button>
-                    </div>
+                    </div> -->
                     <!-- modal end -->
 
                     <app-image-rate-scale [bmxItem]="bmxItem" [i]="i"
