tutorial ipad fixes

--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -83,9 +83,9 @@
                         <mat-checkbox (click)="saveSelection()" class="example-margin container-checkbox" >Don't show again</mat-checkbox>
                     
                         <div class="modal-content">
-                            <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="Girl in a jacket">
+                            <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="tutorial">
                         </div>
-                        <button class="close-modal" (click)="showModalVideo=false">Close</button>
+                        <button class="btn btn-raised close-modal" (click)="showModalVideo=false">Close</button>
                     </div>
                     <!-- modal end -->
                   
