tutorial ipad fixes

--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -85,7 +85,7 @@
                         <div class="modal-content">
                             <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="tutorial">
                         </div>
-                        <button class="btn btn-raised close-modal" (click)="showModalVideo=false">Close</button>
+                        <button class="btn btn-raised close-modal" (click)="showModalVideo=false">close</button>
                     </div>
                     <!-- modal end -->
                   
