--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -111,7 +111,7 @@
         // font-size: 22px;
         // font-weight: bold;
         // text-align: center;
-        height: 25px;
+        // height: 25px;
         // border-radius: 5px;
         transition: background-color 0.5s, color 0.5s;
     }
