tutorial ipad fixes

--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -404,12 +404,12 @@
     min-width: 40px;
     color: white;
     background-color: #ee7f24;
-    border-radius: 50%;
+    // border-radius: 50%;
 }
 .pageNumber {
     min-width: 35px;
     background-color: #f5f3f3;
-    border-radius: 50%;
+    // border-radius: 50%;
 }
 
 .bmx-page::-webkit-scrollbar {
