ajuste links y reubicar boton save

--- a/src/app/bmx/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.html
@@ -144,7 +144,7 @@
                 </div>
             </div> -->
       <div *ngIf="!(userRole == 'Director')" [ngClass]="(isMenuActive11)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive11')">
-        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
+        <div class="link-bmx-creator">
           {{'Survey Creation & Design'}}
         </div>
       </div>
@@ -161,17 +161,17 @@
                 </div>
             </div> -->
       <div [ngClass]="(isMenuActive14)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive14')">
-        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
+        <div class="link-bmx-creator">
           {{'Participants'}}
         </div>
       </div>
       <div [ngClass]="(isMenuActive15)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive15')">
-        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
+        <div class="link-bmx-creator">
           {{'Survey Participants/Email'}}
         </div>
       </div>
       <div [ngClass]="(isMenuActive16)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive16')">
-        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
+        <div class="link-bmx-creator">
           {{'Reports'}}
         </div>
       </div>
