--- a/src/app/bmx/bmx-creator/project-information/project-information.component.html
+++ b/src/app/bmx/bmx-creator/project-information/project-information.component.html
@@ -3,7 +3,7 @@
     <h2 style="margin: 20px;">Project TEST BrandMatrix Setup</h2>
     <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Basic Project Information</div>
     <button mat-raised-button color="success"
-        style="position: absolute;right: 79px;background-color:#063074;color: white;"
+        style="position: absolute;right: -100px;top: 482px; background-color:#063074;color: white;"
         (click)="saveProjectInfo()">Save</button>
     <br>
     <br>
