--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.scss
@@ -131,6 +131,16 @@
     background-color: #324395;
     font-size: 18px;
   }
+
+  .menuCreatorBmx{
+    display: flex;
+    flex-direction: column;
+    margin-top: 15px;
+  }
+
+  .hideMenuCreatorBmx{
+    display: none;
+  }
   
 
 
