--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -201,8 +201,13 @@
     <!-- 🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵  RIGHT SIDE MENU 🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵🎵-->
     <!-- <div class="project-info" *ngIf="bmxClientPageDesignMode" style="border: pink solid 1px; width: 25%; height: 100vh;"> -->
     <div class="project-info" *ngIf="true">
+        <button (click)="showMenucreateNewBmx()" mat-icon-button matTooltip="open menu"
+                matTooltipPosition="right">
+                <mat-icon class="full-icon">{{iconMenuShow}}</mat-icon>
+            </button>
 
-        <div style="display: flex;flex-direction: column;margin-top: 50px;">
+        <div [ngClass]="showMenuCreator?'menuCreatorBmx':'hideMenuCreatorBmx'">
+            
             <button (click)="createNewBmxComponent('logo-header')" mat-icon-button matTooltip="header"
                 matTooltipPosition="right">
                 <mat-icon class="full-icon">account_circle</mat-icon>
@@ -244,6 +249,8 @@
                 <mat-icon class="full-icon">question_answer</mat-icon>
             </button>
             <br>
+        </div>
+        <div style="display: flex;flex-direction: column;" >  
             <button *ngIf="!false" (click)="createPage()" matTooltip="Create New Page" matTooltipPosition="right"
                 mat-icon-button aria-label="aria">
                 <mat-icon class="full-icon-secondary">post_add</mat-icon>
@@ -252,10 +259,18 @@
                 matTooltipPosition="right" mat-icon-button aria-label="aria">
                 <mat-icon class="full-icon-secondary">layers_clear</mat-icon>
             </button>
-            <button (click)="openSaveTemplateBox()" matTooltip="save template" matTooltipPosition="right"
-                mat-icon-button color="warn" aria-label="aria">
+            <button mat-icon-button color="warn" aria-label="aria" id="openSaveTamplate" style="border: none">
                 <mat-icon class="full-icon-secondary">category</mat-icon>
+               <div class="list-save-template">
+                    <mat-list role="list">
+                        <mat-list-item (click)="openSaveTemplateBox()" role="listitem">Save new template</mat-list-item>
+                        <mat-list-item (click)="openUploadDeleteLoadTemplateBox()" role="listitem">Update, load, delete template</mat-list-item>
+                    </mat-list>
+                </div>
             </button>
+            
+            
+             
             <button *ngIf="true" (dblclick)="resetTemplate()" mat-icon-button
                 matTooltip="double click to reset template" matTooltipPosition="right">
                 <mat-icon class="full-icon-secondary">delete_sweep
@@ -290,9 +305,9 @@
 
 </div>
 
-<!--  MODAL BOX TO SAVE AND UPDATE TEMPLATES -->
+<!--  MODAL BOX TO SAVE TEMPLATES -->
 <div *ngIf="isTemplateBoxOn" class="save-template-box"
-    style="display: flex;flex-direction: column;align-items: center;justify-content: space-around;">
+    style="display: flex;flex-direction: column;align-items: center;justify-content: space-evenly;">
     <h2 style="text-align: center;padding-top: 5px;color: #2a3f8a;">{{templateTitle}}</h2>
 
     <mat-form-field appearance="outline">
@@ -302,8 +317,26 @@
             <mat-icon>close</mat-icon>
         </button>
     </mat-form-field>
-    <p style="text-align: center;color: grey;" *ngIf="templateName.length == 0">or select one to load or update</p>
-    <mat-form-field *ngIf="templateName.length == 0" appearance="outline">
+   
+    <div *ngIf="templateName.length > 3"
+        style="display: flex;flex-direction: row;justify-content: space-evenly; width: 300px;">
+        <button (click)="saveOrUpdateTemplate(templateName)" mat-raised-button
+            style="color: white;background-color: #2a3f8a">
+            save
+        </button>
+    </div>
+    <mat-icon (click)="isTemplateBoxOn = false" style="cursor: pointer;" class="full-icon">close
+    </mat-icon>
+</div>
+
+<!--  MODAL BOX TO UPDATE TEMPLATES -->
+<div *ngIf="isTemplateUpdate" class="save-template-box"
+    style="display: flex;flex-direction: column;align-items: center;justify-content: space-evenly;">
+    <h2 style="text-align: center;padding-top: 5px;color: #2a3f8a;">{{templateTitle}}</h2>
+
+
+    <p style="text-align: center;color: grey;" *ngIf="templateName.length == 0">select one to load or update</p>
+    <mat-form-field appearance="outline">
         <mat-label>Templates</mat-label>
         <mat-select [(ngModel)]="templateName" (selectionChange)="templateSelected()">
             <mat-option *ngFor="let template of TEMPLATES " [value]="template">
@@ -313,19 +346,17 @@
     </mat-form-field>
     <div *ngIf="templateName.length > 3"
         style="display: flex;flex-direction: row;justify-content: space-evenly; width: 300px;">
-        <button *ngIf="!isSaveOrUpdate" (click)="saveOrUpdateTemplate(templateName)" mat-raised-button
-            style="color: white;background-color: #2a3f8a">
-            save
-        </button>
-        <button *ngIf="isSaveOrUpdate" (click)="saveOrUpdateTemplate(templateName)" mat-raised-button
-            style="color: white;background-color: #8a2a5a">
-            update
-        </button>
-        <p *ngIf="isSaveOrUpdate">or</p>
         <button *ngIf="isSaveOrUpdate" (click)="loadTemplate(templateName)" mat-raised-button
-            style="color: white;background-color: #2a3f8a">
+            style="color: white;background-color: #8a2a5a ">
             load
         </button>
+    
+        <p *ngIf="isSaveOrUpdate">or</p>
+        <button *ngIf="isSaveOrUpdate" (click)="saveOrUpdateTemplate(templateName)" mat-raised-button
+            style="color: white;background-color: #2a3f8a">
+            update
+        </button>
+        
         <p *ngIf="isSaveOrUpdate">or</p>
         <button *ngIf="isSaveOrUpdate" (dblclick)="deleteTemplate(templateName)"
             matTooltip="double click to delete template" matTooltipPosition="below" mat-raised-button
@@ -333,6 +364,6 @@
             delete
         </button>
     </div>
-    <mat-icon (click)="isTemplateBoxOn = false" style="cursor: pointer;" class="full-icon">close
+    <mat-icon (click)="isTemplateUpdate = false" style="cursor: pointer;" class="full-icon">close
     </mat-icon>
 </div>
