--- a/src/app/bmx/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="userRole != 'User'" class="main-container">
 
   <button class="no-print" *ngIf="globalProjectName.length > 0"
-    style="position: absolute;bottom: 30px;z-index: 9999999999;right: 150px;outline: none;"
+    style="position: absolute;bottom: -65px;z-index: 9999999999;right: 183px;outline: none;"
      mat-raised-button  class="project-name-global">
     PROJECT: {{globalProjectName}}
   </button>
@@ -59,7 +59,7 @@
     <div class="menu" *ngIf="isMainMenuActive">
       <div [ngClass]="(isMenuActive1)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive1')">
         <button mat-icon-button style="margin: 0 20px 0 10px">
-          <mat-icon style="font-size: 40px;">list</mat-icon>
+          <mat-icon style="font-size: 35px;">list</mat-icon>
         </button>
         <div class="create-edit-matrix" style=" text-align: end;font-family: Arial, Helvetica, sans-serif">
           {{'Project List'}}
@@ -94,7 +94,7 @@
       <div *ngIf="!(userRole == 'Director')" [ngClass]="(isMenuActive4)?'menu-active':'menu-item'"
         (click)="toggleMenuActive('isMenuActive8');isMainMenuActive = false ">
         <button mat-icon-button style="margin: 0 20px 0 10px">
-          <mat-icon style="font-size: 35px;">edit</mat-icon>
+          <mat-icon style="font-size: 30px;">edit</mat-icon>
         </button>
         <div class="create-edit-matrix" style=" text-align: end;font-family: Arial, Helvetica, sans-serif">
           {{'Create/Edit Matrix'}}
@@ -143,10 +143,19 @@
                     {{'Image Uploader'}}
                 </div>
             </div> -->
-      <div *ngIf="!(userRole == 'Director')" [ngClass]="(isMenuActive11)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive11')">
-        <div class="link-bmx-creator">
-          {{'Survey Creation & Design'}}
+      <div *ngIf="!(userRole == 'Director')">
+        <div *ngIf="saveProjectSuccess; else noSave" [ngClass]="(isMenuActive11)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive11')">
+          <div class="link-bmx-creator">
+            {{'Survey Creation & Design'}}
+          </div>
         </div>
+        <ng-template #noSave>
+          <div [ngClass]="(isMenuActive11)?'menu-active':'menu-item'">
+            <div class="link-bmx-creator">
+              {{'Survey Creation & Design'}}
+            </div>
+          </div>
+        </ng-template>
       </div>
       <!-- <div [ngClass]="(isMenuActive12)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive12')">
                 <div
@@ -236,7 +245,7 @@
 
   <!-- PROJECT INFORMATION  🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠-->
   <div class="project-info" *ngIf="isMenuActive8">
-    <app-project-information></app-project-information>
+    <app-project-information (saveProjectSuccess)="saveProject($event)"></app-project-information>
   </div>
   <!--🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠🧠 END PROJECT INFORMATION-->
 
