--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -169,10 +169,10 @@
 
         <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryName"
             [value]="bmxItem.componentSettings[0].categoryName" [placeholder]="'Category Name'"
-            style="font-size: 20px;color: #324395;padding-bottom: 7px;padding-left: 10px;">
+            style="font-size: 20px;color: #324395;padding-bottom: 7px;padding-left: 10px; width: 20%">
         <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryDescription"
             [value]="bmxItem.componentSettings[0].categoryDescription" placeholder="Category Description"
-            style="font-size: 20px;color: #ee7f25;padding-bottom: 4px;padding-left: 7px;">
+            style="font-size: 20px;color: #ee7f25;padding-bottom: 4px;padding-left: 7px; width: 20%">
 
         <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Logos</mat-checkbox>
 
